--- a/SalesBook/SalesBook/Components/Layout/NavMenu.razor
+++ b/SalesBook/SalesBook/Components/Layout/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="bi bi-box-seam" aria-hidden="true"></span> Tickets
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/inventories" Match="NavLinkMatch.All">
+                <span class="bi bi-box-seam" aria-hidden="true"></span> Inventory
+            </NavLink>
+        </div>
     </nav>
 </div>
 
