--- a/SalesBook/SalesBook/Components/Pages/TicketPages/Edit.razor
+++ b/SalesBook/SalesBook/Components/Pages/TicketPages/Edit.razor
@@ -25,17 +25,29 @@ else
             <EditForm method="post" Model="Ticket" OnValidSubmit="UpdateTicket" FormName="edit" Enhance>
                 <DataAnnotationsValidator />
                 <ValidationSummary role="alert"/>
-            <div class="row">
+                
+                <div class="row">
                 <input type="hidden" name="Ticket.Id" value="@Ticket.Id" />
-                <div class="mb-3">
-                    <label for="tablenumber" class="form-label">TableNumber:</label>
+                <div class="mb-3 col-sm-6">
+                    <label for="tablenumber" class="form-label fw-semibold">Table Number:</label>
                     <InputNumber id="tablenumber" @bind-Value="Ticket.TableNumber" class="form-control" />
                     <ValidationMessage For="() => Ticket.TableNumber" class="text-danger" />
                 </div>
-                <div class="mb-3">
-                    <label for="clientname" class="form-label">ClientName:</label>
+                <div class="mb-3 col-sm-6">
+                    <label for="clientname" class="form-label fw-semibold">Client Name:</label>
                     <InputText id="clientname" @bind-Value="Ticket.ClientName" class="form-control" />
                     <ValidationMessage For="() => Ticket.ClientName" class="text-danger" />
+                </div>
+                <div class="mb-3 col-sm-6">
+                    <label for="amountpaid" class="form-label fw-semibold">Amount given by client :</label>
+                    <InputNumber id="amountpaid" @bind-Value="Ticket.AmountPaid" class="form-control" @onchange="CalculateChange"/>
+                    <ValidationMessage For="() => Ticket.AmountPaid" class="text-danger" />
+                </div>
+
+                <div class="mb-3 col-sm-6 pt-4">
+                    <InputCheckbox id="transactioncompleted" @bind-Value="Ticket.TransactionCompleted" type="checkbox" class="form-check-input" />
+                    <label for="transactioncompleted" class="form-check-label fw-semibold">Transaction Completed?</label>
+                    <ValidationMessage For="() => Ticket.TransactionCompleted" class="text-danger" />
                 </div>
                 <div class="mb-3 d-none">
                     <label for="createdat" class="form-label">CreatedAt:</label>
@@ -52,18 +64,18 @@ else
 
 	@if(display is not null )
 		{
-           	<div class="row    mt-5">
+           	<div class="row   mt-5">
 				@foreach(var entry in display)
 				{
 					@if(entry is not null && @entry._item is not null)
 					{
-						<div class="@($"col-1 d-flex flex-row border border-{GetColor(entry)} mx-2")" 
+						<div class="@($"col-1 d-flex flex-row  border border-{GetColor(entry)} mx-2")" 
 										@onmousedown="StartClick" @onmouseup="(e) => EndClick(e, entry)"
 										@onclick="(e) => HandleClick(e, entry)">
-							<div class="flex-grow-1">
+							<div class="flex-grow-1 py-2">
 								@entry._item.Abbreviation
 							</div>
-							<div class="@($" px-1 bg-{GetColor(entry)} text-white fw-bold")">
+							<div class="@($" px-2  bg-{GetColor(entry)} text-white fw-bold fs-4")">
 								@entry._count
 							</div>
 						</div>
@@ -75,7 +87,7 @@ else
                 <hr/>
 			@if(records is not null)
 			{
-				<QuickGrid Items="@records.AsQueryable()" Class="table table-striped">
+                <QuickGrid Items="@records.AsQueryable()" Class="table table-striped">
                     <TemplateColumn Context="record" Title="Item Name">
                         @if(record.Item is not null){
                             <div>@record.Item.ItemName</div>
@@ -92,8 +104,13 @@ else
                             <div>@(record.Item.PricePerUnit * record.Quantity )</div>
                         }
                     </TemplateColumn>
-
 				</QuickGrid>
+                <div class="row mb-5 fw-bold fs-3">
+                    <div class="col-sm-8">TOTAL :</div>
+                    <div class="col-sm-2">
+                        @GetReceiptTotal()
+                    </div>
+                </div>
 			}
                 <button type="submit" class="btn btn-primary">Save</button>
             </EditForm>
@@ -111,7 +128,7 @@ else
 
     [SupplyParameterFromForm]
     private Ticket? Ticket { get; set; }
-
+    private decimal calculatedDifference {get; set;}
 
 	//private ICollection<Order>? Ticket.Orders.ToList() ;
 	private ICollection<Item> Items = new List<Item>();
@@ -128,9 +145,9 @@ else
         {
             NavigationManager.NavigateTo("notfound");
         }
-
         InitRecords();
         PopulateDisplay();
+        CalculateChange();
 
     }
     public void InitRecords(){
@@ -142,25 +159,30 @@ else
     // For more information, see https://learn.microsoft.com/aspnet/core/blazor/forms/#mitigate-overposting-attacks.
     private async Task UpdateTicket()
     {
-
-        using var context = DbFactory.CreateDbContext();
-        var ticket = await context.Tickets.Include(t => t.Orders).FirstOrDefaultAsync( t => t.Id == Id);
-
-        context.Entry(ticket).CurrentValues.SetValues(Ticket);
-        var ordersToRemove = ticket.Orders.Where(order => !records.Any(r => r.Id == order.Id)).ToList();
-        context.Orders.RemoveRange(ordersToRemove);
-        
-        var newOrders = records.Where( r => r.Id == 0 ).ToList();
-        foreach(var order in newOrders){
-            ticket.Orders.Add(order);
-        }
-        foreach(var upOrder in records.Where(r => r.Id != 0)){
-            var existingOrder = ticket.Orders.FirstOrDefault( or => or.Id == upOrder.Id);
-            if(existingOrder != null){
-                context.Entry(existingOrder).CurrentValues.SetValues(upOrder);
+        if(Ticket is not null)
+        {
+            Ticket.UpdatedAt = DateTime.UtcNow + TimeSpan.FromHours(1);
+            using var context = DbFactory.CreateDbContext();
+            var ticket = await context.Tickets.Include(t => t.Orders).FirstOrDefaultAsync( t => t.Id == Id);
+            if(ticket is not null && records != null)
+            {
+                context.Entry(ticket).CurrentValues.SetValues(Ticket);
+                var ordersToRemove = ticket.Orders.Where(order => !records.Any(r => r.Id == order.Id)).ToList();
+                context.Orders.RemoveRange(ordersToRemove);
+                
+                var newOrders = records.Where( r => r.Id == 0 ).ToList();
+                foreach(var order in newOrders){
+                    ticket.Orders.Add(order);
+                }
+                foreach(var upOrder in records.Where(r => r.Id != 0)){
+                    var existingOrder = ticket.Orders.FirstOrDefault( or => or.Id == upOrder.Id);
+                    if(existingOrder != null){
+                        context.Entry(existingOrder).CurrentValues.SetValues(upOrder);
+                    }
+                }
             }
+            await context.SaveChangesAsync();
         }
-        await context.SaveChangesAsync();
         NavigationManager.NavigateTo($"/tickets/details?id={Id}");
     }
 
@@ -257,5 +279,20 @@ else
 		}
 		return "danger";
 	}
+    public decimal GetReceiptTotal(){
+        decimal total = 0.0M;
+        if(records != null)
+        {
+            foreach(var record in records){
+                if(record.Item != null)
+                    total += record.Item.PricePerUnit * (decimal)record.Quantity;
+            }
+        }
+        return total;
+    }
+    public void CalculateChange(){
+        if(Ticket != null)
+            calculatedDifference = Ticket.AmountPaid - GetReceiptTotal();
+    }
 }
 
